Task-58028 : Dockerize eXo platform community package