@@ -89,11 +89,19 @@ case "${EXO_DB_TYPE}" in
     [ -z "${EXO_DB_PORT}" ] && EXO_DB_PORT="3306"
     [ -z "${EXO_DB_MYSQL_USE_SSL}" ] && EXO_DB_MYSQL_USE_SSL="false"
     ;;
-  *)
+  pgsql|postgres|postgresql)
+    [ -z "${EXO_DB_NAME}" ] && EXO_DB_NAME="exo"
+    [ -z "${EXO_DB_USER}" ] && EXO_DB_USER="exo"
+    [ -z "${EXO_DB_PASSWORD}" ] && { echo "ERROR: you must provide a database password with EXO_DB_PASSWORD environment variable"; exit 1;}
+    [ -z "${EXO_DB_HOST}" ] && EXO_DB_HOST="db"
+    [ -z "${EXO_DB_PORT}" ] && EXO_DB_PORT="5432"
+    ;;
+    *)
     echo "ERROR: you must provide a supported database type with EXO_DB_TYPE environment variable (current value is '${EXO_DB_TYPE}')"
     echo "ERROR: supported database types are :"
     echo "ERROR: HSQLDB     (EXO_DB_TYPE = hsqldb) (default)"
     echo "ERROR: MySQL      (EXO_DB_TYPE = mysql)"
+    echo "ERROR: Postgresql (EXO_DB_TYPE = pgsql)"
     exit 1;;
 esac
 [ -z "${EXO_DB_POOL_IDM_INIT_SIZE}" ] && EXO_DB_POOL_IDM_INIT_SIZE="5"
@@ -133,12 +141,12 @@ esac
 [ -z "${EXO_MONGO_PASSWORD}" ] && EXO_MONGO_PASSWORD="-"
 [ -z "${EXO_MONGO_DB_NAME}" ] && EXO_MONGO_DB_NAME="chat"
 
+[ -z "${EXO_CHAT_SERVER_STANDALONE}" ] && EXO_CHAT_SERVER_STANDALONE="false"
 [ -z "${EXO_CHAT_SERVER_URL}" ] && EXO_CHAT_SERVER_URL="http://localhost:8080"
+[ -z "${EXO_CHAT_SERVICE_URL}" ] && EXO_CHAT_SERVICE_URL=""
 [ -z "${EXO_CHAT_SERVER_PASSPHRASE}" ] && EXO_CHAT_SERVER_PASSPHRASE="something2change"
 
-[ -z "${EXO_ES_EMBEDDED}" ] && EXO_ES_EMBEDDED="true"
 [ -z "${EXO_ES_TIMEOUT}" ] && EXO_ES_TIMEOUT="60"
-[ -z "${EXO_ES_EMBEDDED_DATA}" ] && EXO_ES_EMBEDDED_DATA="/srv/exo/es"
 [ -z "${EXO_ES_SCHEME}" ] && EXO_ES_SCHEME="http"
 [ -z "${EXO_ES_HOST}" ] && EXO_ES_HOST="localhost"
 [ -z "${EXO_ES_PORT}" ] && EXO_ES_PORT="9200"
@@ -148,7 +156,12 @@ EXO_ES_URL="${EXO_ES_SCHEME}://${EXO_ES_HOST}:${EXO_ES_PORT}"
 [ -z "${EXO_ES_INDEX_REPLICA_NB}" ] && EXO_ES_INDEX_REPLICA_NB="1"
 [ -z "${EXO_ES_INDEX_SHARD_NB}" ] && EXO_ES_INDEX_SHARD_NB="5"
 
+[ -z "${EXO_LDAP_POOL_TIMEOUT}" ] && EXO_LDAP_POOL_TIMEOUT="60000"
+[ -z "${EXO_LDAP_POOL_MAX_SIZE}" ] && EXO_LDAP_POOL_MAX_SIZE="100"
+
 [ -z "${EXO_JODCONVERTER_PORTS}" ] && EXO_JODCONVERTER_PORTS="2002"
+
+[ -z "${EXO_PROFILES}" ] && EXO_PROFILES="all"
 
 [ -z "${EXO_REWARDS_WALLET_ADMIN_KEY}" ] && EXO_REWARDS_WALLET_ADMIN_KEY="changeThisKey"
 [ -z "${EXO_REWARDS_WALLET_ACCESS_PERMISSION}" ] && EXO_REWARDS_WALLET_ACCESS_PERMISSION="/platform/user"
@@ -156,6 +169,23 @@ EXO_ES_URL="${EXO_ES_SCHEME}://${EXO_ES_HOST}:${EXO_ES_PORT}"
 [ -z "${EXO_REWARDS_WALLET_NETWORK_ENDPOINT_HTTP}" ] && EXO_REWARDS_WALLET_NETWORK_ENDPOINT_HTTP="https://mainnet.infura.io/v3/a1ac85aea9ce4be88e9e87dad7c01d40"
 [ -z "${EXO_REWARDS_WALLET_NETWORK_ENDPOINT_WEBSOCKET}" ] && EXO_REWARDS_WALLET_NETWORK_ENDPOINT_WEBSOCKET="wss://mainnet.infura.io/ws/v3/a1ac85aea9ce4be88e9e87dad7c01d40"
 [ -z "${EXO_REWARDS_WALLET_TOKEN_ADDRESS}" ] && EXO_REWARDS_WALLET_TOKEN_ADDRESS="0xc76987d43b77c45d51653b6eb110b9174acce8fb"
+
+[ -z "${EXO_AGENDA_GOOGLE_CONNECTOR_ENABLED}" ] && EXO_AGENDA_GOOGLE_CONNECTOR_ENABLED="true"
+[ -z "${EXO_AGENDA_OFFICE_CONNECTOR_ENABLED}" ] && EXO_AGENDA_OFFICE_CONNECTOR_ENABLED="true"
+[ -z "${EXO_AGENDA_GOOGLE_CONNECTOR_CLIENT_API_KEY}" ] && EXO_AGENDA_GOOGLE_CONNECTOR_CLIENT_API_KEY=""
+[ -z "${EXO_AGENDA_OFFICE_CONNECTOR_CLIENT_API_KEY}" ] && EXO_AGENDA_OFFICE_CONNECTOR_CLIENT_API_KEY=""
+
+[ -z "${EXO_ADDONS_CONFLICT_MODE}" ] && EXO_ADDONS_CONFLICT_MODE=""
+[ -z "${EXO_ADDONS_NOCOMPAT_MODE}" ] && EXO_ADDONS_NOCOMPAT_MODE="false"
+
+[ -z "${EXO_JCR_FS_STORAGE_ENABLED}" ] && EXO_JCR_FS_STORAGE_ENABLED=""
+[ -z "${EXO_FILE_STORAGE_TYPE}" ] && EXO_FILE_STORAGE_TYPE=""
+
+[ -z "${EXO_CLUSTER_NODE_NAME}" ] && EXO_CLUSTER_NODE_NAME=""
+
+[ -z "${EXO_TOKEN_REMEMBERME_EXPIRATION_VALUE}" ] && EXO_TOKEN_REMEMBERME_EXPIRATION_VALUE="7"
+[ -z "${EXO_TOKEN_REMEMBERME_EXPIRATION_UNIT}" ] && EXO_TOKEN_REMEMBERME_EXPIRATION_UNIT="DAY"
+[ -z "${EXO_GZIP_ENABLED}" ] && EXO_GZIP_ENABLED="true"
 
 set -u		# REACTIVATE unbound variable check
 
@@ -165,18 +195,18 @@ set -u		# REACTIVATE unbound variable check
 if [ -f /opt/exo/_done.configuration ]; then
   echo "INFO: Configuration already done! skipping this step."
 else
-
-  if [ ! -z "${EXO_ADDONS_CATALOG_URL:-}" ]; then
-    echo "The add-on manager catalog url was overriden with : ${EXO_ADDONS_CATALOG_URL}"
-    _ADDON_MGR_OPTION_CATALOG="--catalog=${EXO_ADDONS_CATALOG_URL}"
-  fi
-
   # Jcr storage configuration
+  add_in_exo_configuration "# JCR storage configuration"
+  if [ ! -z ${EXO_JCR_FS_STORAGE_ENABLED} ]; then
+    add_in_exo_configuration "exo.jcr.storage.enabled=${EXO_JCR_FS_STORAGE_ENABLED}"
+  fi
   add_in_exo_configuration "exo.jcr.storage.data.dir=${EXO_JCR_STORAGE_DIR}"
 
-  # File storage configuration
+ # File storage configuration
   add_in_exo_configuration "# File storage configuration"
-  add_in_exo_configuration "exo.files.binaries.storage.type=fs"
+  if [ ! -z ${EXO_FILE_STORAGE_TYPE} ]; then
+    add_in_exo_configuration "exo.files.binaries.storage.type=${EXO_FILE_STORAGE_TYPE}"
+  fi
   add_in_exo_configuration "exo.files.storage.dir=${EXO_FILE_STORAGE_DIR}"
   add_in_exo_configuration "exo.commons.FileStorageCleanJob.retention-time=${EXO_FILE_STORAGE_RETENTION}"
 
@@ -187,7 +217,12 @@ else
       ;;
     mysql)
       cat /opt/exo/conf/server-mysql.xml > /opt/exo/conf/server.xml
-      replace_in_file /opt/exo/conf/server.xml "jdbc:mysql://localhost:3306/plf?autoReconnect=true" "jdbc:mysql://${EXO_DB_HOST}:${EXO_DB_PORT}/${EXO_DB_NAME}?autoReconnect=true\&amp;useSSL=${EXO_DB_MYSQL_USE_SSL}"
+      replace_in_file /opt/exo/conf/server.xml "jdbc:mysql://localhost:3306/plf?autoReconnect=true" "jdbc:mysql://${EXO_DB_HOST}:${EXO_DB_PORT}/${EXO_DB_NAME}?autoReconnect=true\&amp;useSSL=${EXO_DB_MYSQL_USE_SSL}\&amp;allowPublicKeyRetrieval=true"
+      replace_in_file /opt/exo/conf/server.xml 'username="plf" password="plf"' 'username="'${EXO_DB_USER}'" password="'${EXO_DB_PASSWORD}'"'
+      ;;
+    pgsql|postgres|postgresql)
+      cat /opt/exo/conf/server-postgres.xml > /opt/exo/conf/server.xml
+      replace_in_file /opt/exo/conf/server.xml "jdbc:postgresql://localhost:5432/plf" "jdbc:postgresql://${EXO_DB_HOST}:${EXO_DB_PORT}/${EXO_DB_NAME}"
       replace_in_file /opt/exo/conf/server.xml 'username="plf" password="plf"' 'username="'${EXO_DB_USER}'" password="'${EXO_DB_PASSWORD}'"'
       ;;
     *) echo "ERROR: you must provide a supported database type with EXO_DB_TYPE environment variable (current value is '${EXO_DB_TYPE}')";
@@ -200,8 +235,10 @@ else
     exit 1
   }
 
-    # Update IDM datasource settings
+  # Update IDM datasource settings
   xmlstarlet ed -L -u "/Server/GlobalNamingResources/Resource[@name='exo-idm_portal']/@initialSize" -v "${EXO_DB_POOL_IDM_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-idm_portal']/@minIdle" -v "${EXO_DB_POOL_IDM_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-idm_portal']/@maxIdle" -v "${EXO_DB_POOL_IDM_INIT_SIZE}" \
     -u "/Server/GlobalNamingResources/Resource[@name='exo-idm_portal']/@maxActive" -v "${EXO_DB_POOL_IDM_MAX_SIZE}" \
     /opt/exo/conf/server.xml || {
     echo "ERROR during xmlstarlet processing (configuring datasource exo-idm_portal)"
@@ -210,6 +247,8 @@ else
 
   # Update JCR datasource settings
   xmlstarlet ed -L -u "/Server/GlobalNamingResources/Resource[@name='exo-jcr_portal']/@initialSize" -v "${EXO_DB_POOL_JCR_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-jcr_portal']/@minIdle" -v "${EXO_DB_POOL_JCR_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-jcr_portal']/@maxIdle" -v "${EXO_DB_POOL_JCR_INIT_SIZE}" \
     -u "/Server/GlobalNamingResources/Resource[@name='exo-jcr_portal']/@maxActive" -v "${EXO_DB_POOL_JCR_MAX_SIZE}" \
     /opt/exo/conf/server.xml || {
     echo "ERROR during xmlstarlet processing (configuring datasource exo-jcr_portal)"
@@ -218,15 +257,25 @@ else
 
   # Update JPA datasource settings
   xmlstarlet ed -L -u "/Server/GlobalNamingResources/Resource[@name='exo-jpa_portal']/@initialSize" -v "${EXO_DB_POOL_JPA_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-jpa_portal']/@minIdle" -v "${EXO_DB_POOL_JPA_INIT_SIZE}" \
+    -u "/Server/GlobalNamingResources/Resource[@name='exo-jpa_portal']/@maxIdle" -v "${EXO_DB_POOL_JPA_INIT_SIZE}" \
     -u "/Server/GlobalNamingResources/Resource[@name='exo-jpa_portal']/@maxActive" -v "${EXO_DB_POOL_JPA_MAX_SIZE}" \
     /opt/exo/conf/server.xml || {
     echo "ERROR during xmlstarlet processing (configuring datasource exo-jpa_portal)"
     exit 1
   }
 
+
   ## Remove AJP connector
   xmlstarlet ed -L -d '//Connector[@protocol="AJP/1.3"]' /opt/exo/conf/server.xml || {
     echo "ERROR during xmlstarlet processing (AJP connector removal)"
+    exit 1
+  }
+
+  ## Force JSESSIONID to be added in cookie instead of URL
+  xmlstarlet ed -L -d "/Context/@cookies" /opt/exo/conf/context.xml && \
+    xmlstarlet ed -L -s "/Context" -t attr -n "cookies" -v "true" /opt/exo/conf/context.xml || {
+    echo "ERROR during xmlstarlet processing (cookies definition)"
     exit 1
   }
 
@@ -238,7 +287,7 @@ else
 
   if [ "${EXO_PROXY_SSL}" = "true" ]; then
     xmlstarlet ed -L -s "/Server/Service/Connector" -t attr -n "scheme" -v "https" \
-      -s "/Server/Service/Connector" -t attr -n "secure" -v "false" \
+      -s "/Server/Service/Connector" -t attr -n "secure" -v "true" \
       -s "/Server/Service/Connector" -t attr -n "proxyPort" -v "${EXO_PROXY_PORT}" \
       /opt/exo/conf/server.xml || {
       echo "ERROR during xmlstarlet processing (configuring Connector proxy ssl)"
@@ -266,6 +315,9 @@ else
 
   # Upload size
   add_in_exo_configuration "exo.ecms.connector.drives.uploadLimit=${EXO_UPLOAD_MAX_FILE_SIZE}"
+  add_in_exo_configuration "exo.social.activity.uploadLimit=${EXO_UPLOAD_MAX_FILE_SIZE}"
+  add_in_exo_configuration "wiki.attachment.uploadLimit=${EXO_UPLOAD_MAX_FILE_SIZE}"
+  add_in_exo_configuration "exo.uploadLimit=${EXO_UPLOAD_MAX_FILE_SIZE}"
 
   # Tomcat HTTP Thread pool configuration
   xmlstarlet ed -L -s "/Server/Service/Connector" -t attr -n "maxThreads" -v "${EXO_HTTP_THREAD_MAX}" \
@@ -275,21 +327,68 @@ else
     exit 1
   }
 
-  # Add a new valve to replace the proxy ip by the client ip (just before the end of Host)
-  xmlstarlet ed -L -s "/Server/Service/Engine/Host" -t elem -n "ValveTMP" -v "" \
-  -i "//ValveTMP" -t attr -n "className" -v "org.apache.catalina.valves.RemoteIpValve" \
-  -i "//ValveTMP" -t attr -n "remoteIpHeader" -v "x-forwarded-for" \
-  -i "//ValveTMP" -t attr -n "proxiesHeader" -v "x-forwarded-by" \
-  -i "//ValveTMP" -t attr -n "protocolHeader" -v "x-forwarded-proto" \
-  -r "//ValveTMP" -v Valve \
-  /opt/exo/conf/server.xml || {
-    echo "ERROR during xmlstarlet processing (adding RemoteIpValve)"
-    exit 1
-  }
+  # Tomcat valves and listeners configuration
+  if [ -e /etc/exo/host.yml ]; then
+    echo "Override default valves and listeners configuration"
+
+    # Remove the default configuration
+    xmlstarlet ed -L -d "/Server/Service/Engine/Host/Valve" \
+        -d "/Server/Service/Engine/Host/Listener" \
+        /opt/exo/conf/server.xml || {
+      echo "ERROR during xmlstarlet processing (Remove default host configuration)"
+      exit 1
+    }
+
+    i=0
+    while [ $i -ge 0 ]; do
+      # Declare component
+      type=$(yq read /etc/exo/host.yml components[$i].type)
+      if [ "${type}" != "null" ]; then
+        className=$(yq read /etc/exo/host.yml components[$i].className)
+        echo "Declare ${type} ${className}"
+        xmlstarlet ed -L -s "/Server/Service/Engine/Host" -t elem -n "${type}TMP" -v "" \
+            -i "//${type}TMP" -t attr -n "className" -v "${className}" \
+            /opt/exo/conf/server.xml || {
+          echo "ERROR during xmlstarlet processing (adding ${className})"
+          exit 1
+        }
+
+        # Add component attributes
+        j=0
+        while [ $j -ge 0 ]; do
+          attributeName=$(yq read /etc/exo/host.yml components[$i].attributes[$j].name)
+          if [ "${attributeName}" != "null" ]; then
+            attributeValue=$(yq read /etc/exo/host.yml components[$i].attributes[$j].value | tr -d "'")
+            xmlstarlet ed -L -i "//${type}TMP" -t attr -n "${attributeName}" -v "${attributeValue}" \
+                /opt/exo/conf/server.xml || {
+              echo "ERROR during xmlstarlet processing (adding ${className} / ${attributeName})"
+            }
+
+            j=$(($j + 1))
+          else
+            j=-1
+          fi
+        done
+
+        # Rename the component to its final type
+        xmlstarlet ed -L -r "//${type}TMP" -v "${type}" \
+            /opt/exo/conf/server.xml || {
+          echo "ERROR during xmlstarlet processing (renaming ${type}TMP)"
+          exit 1
+        }
+
+        i=$(($i + 1))
+      else
+        i=-1
+      fi
+    done
+  fi
+
 
   # Mail configuration
   add_in_exo_configuration "# Mail configuration"
   add_in_exo_configuration "exo.email.smtp.from=${EXO_MAIL_FROM}"
+  add_in_exo_configuration "gatein.email.smtp.from=${EXO_MAIL_FROM}"
   add_in_exo_configuration "exo.email.smtp.host=${EXO_MAIL_SMTP_HOST}"
   add_in_exo_configuration "exo.email.smtp.port=${EXO_MAIL_SMTP_PORT}"
   add_in_exo_configuration "exo.email.smtp.starttls.enable=${EXO_MAIL_SMTP_STARTTLS}"
@@ -304,20 +403,12 @@ else
   fi
   add_in_exo_configuration "exo.email.smtp.socketFactory.port="
   add_in_exo_configuration "exo.email.smtp.socketFactory.class="
-
+ # SMTP TLS Version, Example: TLSv1.2
+  if [ ! -z "${EXO_SMTP_SSL_PROTOCOLS:-}" ]; then 
+    add_in_exo_configuration "mail.smtp.ssl.protocols=${EXO_SMTP_SSL_PROTOCOLS}"
+  fi
   # JMX configuration
-  if [ "${EXO_JMX_ENABLED}" = "true" ]; then
-    # insert the listener before the "Global JNDI resources" line
-    xmlstarlet ed -L -i "/Server/GlobalNamingResources" -t elem -n ListenerTMP -v "" \
-      -i "//ListenerTMP" -t attr -n "className" -v "org.apache.catalina.mbeans.JmxRemoteLifecycleListener" \
-      -i "//ListenerTMP" -t attr -n "rmiRegistryPortPlatform" -v "${EXO_JMX_RMI_REGISTRY_PORT}" \
-      -i "//ListenerTMP" -t attr -n "rmiServerPortPlatform" -v "${EXO_JMX_RMI_SERVER_PORT}" \
-      -i "//ListenerTMP" -t attr -n "useLocalPorts" -v "false" \
-      -r "//ListenerTMP" -v "Listener" \
-      /opt/exo/conf/server.xml || {
-      echo "ERROR during xmlstarlet processing (adding JmxRemoteLifecycleListener)"
-      exit 1
-    }
+if [ "${EXO_JMX_ENABLED}" = "true" ]; then
     # Create the security files if required
     if [ "${EXO_JMX_USERNAME:-}" != "-" ]; then
       if [ "${EXO_JMX_PASSWORD:-}" = "-" ]; then
@@ -349,18 +440,17 @@ else
     }
   fi
 
-  # Elasticsearch configuration
-  add_in_exo_configuration "# Elasticsearch configuration"
-  add_in_exo_configuration "exo.es.embedded.enabled=${EXO_ES_EMBEDDED}"
-  if [ "${EXO_ES_EMBEDDED}" = "true" ]; then
-    add_in_exo_configuration "es.network.host=0.0.0.0" # we listen on all IPs inside the container
-    add_in_exo_configuration "es.discovery.zen.ping.multicast.enabled=false"
-    add_in_exo_configuration "es.http.port=${EXO_ES_PORT}"
-    add_in_exo_configuration "es.path.data=${EXO_ES_EMBEDDED_DATA}"
-  else
-    # Remove eXo ES Embedded add-on
-    EXO_ADDONS_REMOVE_LIST="${EXO_ADDONS_REMOVE_LIST:-},exo-es-embedded"
+  # Gzip compression
+  if [ "${EXO_GZIP_ENABLED}" = "true" ]; then
+    xmlstarlet ed -L -u "/Server/Service/Connector/@compression" -v "on" /opt/exo/conf/server.xml || {
+      echo "ERROR during xmlstarlet processing (configuring Connector compression)"
+      exit 1
+    }
   fi
+  
+  # Elasticsearch configuration
+ add_in_exo_configuration "# Elasticsearch configuration"
+  add_in_exo_configuration "exo.es.embedded.enabled=false"
 
   add_in_exo_configuration "exo.es.search.server.url=${EXO_ES_URL}"
   add_in_exo_configuration "exo.es.index.server.url=${EXO_ES_URL}"
@@ -433,6 +523,19 @@ else
   add_in_exo_configuration "exo.wallet.blockchain.network.http=${EXO_REWARDS_WALLET_NETWORK_ENDPOINT_HTTP}"
   add_in_exo_configuration "exo.wallet.blockchain.network.websocket=${EXO_REWARDS_WALLET_NETWORK_ENDPOINT_WEBSOCKET}"
   add_in_exo_configuration "exo.wallet.blockchain.token.address=${EXO_REWARDS_WALLET_TOKEN_ADDRESS}"
+  [ ! -z "${EXO_REWARDS_WALLET_ADMIN_PRIVATE_KEY:-}" ] && add_in_exo_configuration "exo.wallet.admin.privateKey=${EXO_REWARDS_WALLET_ADMIN_PRIVATE_KEY}"
+  [ ! -z "${EXO_REWARDS_WALLET_NETWORK_CRYPTOCURRENCY:-}" ] && add_in_exo_configuration "exo.wallet.blockchain.network.cryptocurrency=${EXO_REWARDS_WALLET_NETWORK_CRYPTOCURRENCY}"
+  [ ! -z "${EXO_REWARDS_WALLET_TOKEN_SYMBOL:-}" ] && add_in_exo_configuration "exo.wallet.blockchain.token.symbol=${EXO_REWARDS_WALLET_TOKEN_SYMBOL}"
+  # eXo Agenda
+  add_in_exo_configuration "# Agenda configuration"
+  add_in_exo_configuration "exo.agenda.google.connector.enabled=${EXO_AGENDA_GOOGLE_CONNECTOR_ENABLED}"
+  add_in_exo_configuration "exo.agenda.google.connector.key=${EXO_AGENDA_GOOGLE_CONNECTOR_CLIENT_API_KEY}"
+  add_in_exo_configuration "exo.agenda.office.connector.enabled=${EXO_AGENDA_OFFICE_CONNECTOR_ENABLED}"
+  add_in_exo_configuration "exo.agenda.office.connector.key=${EXO_AGENDA_OFFICE_CONNECTOR_CLIENT_API_KEY}"
+
+  # Rememberme Token expiration
+  add_in_exo_configuration "exo.token.rememberme.expiration.value=${EXO_TOKEN_REMEMBERME_EXPIRATION_VALUE}"
+  add_in_exo_configuration "exo.token.rememberme.expiration.unit=${EXO_TOKEN_REMEMBERME_EXPIRATION_UNIT}"
 
   # put a file to avoid doing the configuration twice
   touch /opt/exo/_done.configuration
@@ -447,6 +550,16 @@ else
   echo "# ------------------------------------ #"
   echo "# eXo add-ons management start ..."
   echo "# ------------------------------------ #"
+
+  if [ ! -z "${EXO_ADDONS_CATALOG_URL:-}" ]; then
+    echo "The add-on manager catalog url was overriden with : ${EXO_ADDONS_CATALOG_URL}"
+    _ADDON_MGR_OPTION_CATALOG="--catalog=${EXO_ADDONS_CATALOG_URL}"
+  fi
+
+  if [ ! -z "${EXO_PATCHES_CATALOG_URL:-}" ]; then
+    echo "The add-on manager patches catalog url was defined with : ${EXO_PATCHES_CATALOG_URL}"
+    _ADDON_MGR_OPTION_PATCHES_CATALOG="--catalog=${EXO_PATCHES_CATALOG_URL}"
+  fi
 
   # add-ons removal
   if [ -z "${EXO_ADDONS_REMOVE_LIST:-}" ]; then
@@ -471,7 +584,16 @@ else
 
   echo "# ------------------------------------ #"
   
-  # add-on installation
+  # add-on installation options
+  if [ "${EXO_ADDONS_CONFLICT_MODE:-}" = "overwrite" ] || [ "${EXO_ADDONS_CONFLICT_MODE:-}" = "ignore" ]; then 
+    _ADDON_MGR_OPTIONS="${_ADDON_MGR_OPTIONS:-} --conflict=${EXO_ADDONS_CONFLICT_MODE}"
+  fi
+
+  if [ "${EXO_ADDONS_NOCOMPAT_MODE:-false}" = "true" ]; then 
+    _ADDON_MGR_OPTIONS="${_ADDON_MGR_OPTIONS:-} --no-compat"
+  fi
+
+  # add-on installation 
   if [ -z "${EXO_ADDONS_LIST:-}" ]; then
     echo "# no add-on to install from EXO_ADDONS_LIST environment variable."
   else
@@ -507,12 +629,32 @@ if [ -f /etc/exo/chat.properties ]; then
 fi
 
 # -----------------------------------------------------------------------------
+# Fix CVE-2021-44228
+# -----------------------------------------------------------------------------
+CATALINA_OPTS="${CATALINA_OPTS:-} -Dlog4j2.formatMsgNoLookups=true"
+
+# Enable Debug Mode
+if [ "${EXO_DEBUG_ENABLED:-false}" = "true" ]; then
+  CATALINA_OPTS="${CATALINA_OPTS} -agentlib:jdwp=transport=dt_socket,address=*:${EXO_DEBUG_PORT:-8000},server=y,suspend=n"
+fi
+# -----------------------------------------------------------------------------
+# LDAP configuration
+# -----------------------------------------------------------------------------
+CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.jndi.ldap.connect.pool.timeout=${EXO_LDAP_POOL_TIMEOUT}"
+CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.jndi.ldap.connect.pool.maxsize=${EXO_LDAP_POOL_MAX_SIZE}"
+if [ ! -z "${EXO_LDAP_POOL_DEBUG:-}" ]; then
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.jndi.ldap.connect.pool.debug=${EXO_LDAP_POOL_DEBUG}"
+fi
+
+# -----------------------------------------------------------------------------
 # JMX configuration
 # -----------------------------------------------------------------------------
 if [ "${EXO_JMX_ENABLED}" = "true" ]; then
-  CATALINA_OPTS="${CATALINA_OPTS:-} -Dcom.sun.management.jmxremote=true"
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote=true"
   CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote.ssl=false"
   CATALINA_OPTS="${CATALINA_OPTS} -Djava.rmi.server.hostname=${EXO_JMX_RMI_SERVER_HOSTNAME}"
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote.port=${EXO_JMX_RMI_REGISTRY_PORT}"
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote.rmi.port=${EXO_JMX_RMI_SERVER_PORT}"
   if [ "${EXO_JMX_USERNAME:-}" = "-" ]; then
     CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote.authenticate=false"
   else
@@ -522,16 +664,14 @@ if [ "${EXO_JMX_ENABLED}" = "true" ]; then
   fi
 fi
 
+
 # -----------------------------------------------------------------------------
 # LOG GC configuration
 # -----------------------------------------------------------------------------
 if [ "${EXO_JVM_LOG_GC_ENABLED}" = "true" ]; then
-  # -XX:+PrintGCDateStamps : print the absolute timestamp in the log statement (i.e. “2014-11-18T16:39:25.303-0800”)
-  # -XX:+PrintGCTimeStamps : print the time when the GC event started, relative to the JVM startup time (unit: seconds)
-  # -XX:+PrintGCDetails    : print the details of how much memory is reclaimed in each generation
-  EXO_JVM_LOG_GC_OPTS="-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps"
+  EXO_JVM_LOG_GC_OPTS="-Xlog:gc=info:file=${EXO_LOG_DIR}/platform-gc.log:time"
   echo "Enabling eXo JVM GC logs with [${EXO_JVM_LOG_GC_OPTS}] options ..."
-  CATALINA_OPTS="${CATALINA_OPTS} ${EXO_JVM_LOG_GC_OPTS} -Xloggc:${EXO_LOG_DIR}/platform-gc.log"
+  CATALINA_OPTS="${CATALINA_OPTS} ${EXO_JVM_LOG_GC_OPTS}"
   # log rotation to backup previous log file (we don't use GC Log file rotation options because they are not suitable)
   # create the directory for older GC log file
   [ ! -d ${EXO_LOG_DIR}/platform-gc/ ] && mkdir ${EXO_LOG_DIR}/platform-gc/
@@ -542,7 +682,6 @@ if [ "${EXO_JVM_LOG_GC_ENABLED}" = "true" ]; then
   fi
   echo "eXo JVM GC logs configured and available at ${EXO_LOG_DIR}/platform-gc.log"
 fi
-
 # -----------------------------------------------------------------------------
 # Create the DATA directories if needed
 # -----------------------------------------------------------------------------
@@ -565,6 +704,18 @@ case "${EXO_DB_TYPE}" in
     if [ $? != 0 ]; then
       echo "[ERROR] The ${EXO_DB_TYPE} database ${EXO_DB_HOST}:${EXO_DB_PORT} was not available within ${EXO_DB_TIMEOUT}s ! eXo startup aborted ..."
       exit 1
+    else
+      echo "Database ${EXO_DB_TYPE} is available, continue starting..."
+    fi
+    ;;
+  pgsql|postgres|postgresql)
+    echo "Waiting for database ${EXO_DB_TYPE} availability at ${EXO_DB_HOST}:${EXO_DB_PORT} ..."
+    wait-for ${EXO_DB_HOST}:${EXO_DB_PORT} -s -t ${EXO_DB_TIMEOUT}
+    if [ $? != 0 ]; then
+      echo "[ERROR] The ${EXO_DB_TYPE} database ${EXO_DB_HOST}:${EXO_DB_PORT} was not available within ${EXO_DB_TIMEOUT}s ! eXo startup aborted ..."
+      exit 1
+    else
+      echo "Database ${EXO_DB_TYPE} is available, continue starting..."
     fi
     ;;
 esac
